--- a/majorproject/src/Component/Assets/Dashboard/Dashboard.css
+++ b/majorproject/src/Component/Assets/Dashboard/Dashboard.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 2.3rem;
-    height: 94vh;
+    height: 94dvh;
 }
 .logo{
     text-align: center;
@@ -43,6 +43,7 @@
     border-radius: 10px;
     transition: 0.1s ease-in-out;
     color: #27374d;
+    width: 170px;
 }
 
 
