--- a/majorproject/src/Component/Assets/Dashboard/Dashboard.css
+++ b/majorproject/src/Component/Assets/Dashboard/Dashboard.css
@@ -4,7 +4,7 @@
     gap: 20px;
 }
 .dashboard--content{
-    background: #fff;
+    /* background: #fff; */
     flex: 1;
     border-radius: 20px;
     padding: 2rem;
