--- a/majorproject/src/Component/Assets/Dashboard/Sidebar/Sidebar.css
+++ b/majorproject/src/Component/Assets/Dashboard/Sidebar/Sidebar.css
@@ -1,8 +1,4 @@
 *{
-    margin: 0%;
-    padding: 0%;
-  }
-  .body{
-    background: #dde6ed;
-    padding: 20px;
+    margin: 0;
+    padding: 0;
   }
