--- a/majorproject/src/Component/Assets/Dashboard/Sidebar/Sidebar.css
+++ b/majorproject/src/Component/Assets/Dashboard/Sidebar/Sidebar.css
@@ -1,4 +1,40 @@
-*{
-    margin: 0;
-    padding: 0;
-  }
+.menu{
+  display: flex;
+  flex-direction: column;
+  gap: 2.3rem;
+  height: 94dvh;
+}
+.logo{
+  text-align: center;
+  padding: 20px;
+  color: #27374d;
+  align-items: center;
+  display: flex;
+  gap: 20px;
+}
+.logo-icon{
+  font-size: 1.8rem;
+}
+
+.menu--list{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.menu--list .item{
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  gap: 20px;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 0.1s ease-in-out;
+  color: #27374d;
+}
+
+.menu--list .item:hover{
+  background: #27374d;
+  color: #dde6ed;
+}
