--- a/majorproject/src/Component/Assets/Forget-Password/Forget.css
+++ b/majorproject/src/Component/Assets/Forget-Password/Forget.css
@@ -4,7 +4,14 @@
     background: #dde6ed;
 }
 #title{
-    color: #27374d;
+    color: #27374d; 
+} 
+.for-t-t{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 120px;
     position: relative;
     top: 70px;
 }
@@ -21,15 +28,15 @@
     opacity: 0.8;
     border-radius: 12px;
     width: 400px;
-    height: 400px;
+    height: 330px;
     margin-top: 90px; 
 }
 #for-email{    
-    position: relative;
-    top: 110px;
+     position: relative;
+     /* top: 110px;  */
     height: auto;
     width: 250px;
-    margin: auto;
+    /* margin: auto;  */
 }
 
 #for-btn{
