--- a/majorproject/src/Component/Assets/Forget-Password/Reset.css
+++ b/majorproject/src/Component/Assets/Forget-Password/Reset.css
@@ -1,8 +1,7 @@
 #reset-body{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 213, 255, 0.808);
+    display: grid;
+    place-content: center;
+    background: #dde6ed;
 }
 #reset{
     display: flex;
@@ -13,11 +12,28 @@
     border-radius: 7px;
     align-items: center;
     justify-content: center;
-    box-shadow: rgb(245, 245, 245) 0px 5px 15px;
+    /* box-shadow: rgb(245, 245, 245) 0px 5px 15px; */
     opacity: 0.8;
     border-radius: 12px;
     width: 400px;
     height: 400px;
     margin-top: 90px;
-    margin-left: 500px;
+}
+.btn-reset{
+    margin: auto;
+    color: #dde6ed;
+    background: #27374d;
+}
+#new-pass{
+    width:250px;
+}
+#con-pass{
+    width: 250px;
+}
+.reset-head{
+    font-size: 24px;
+    font-weight: 600;
+    color: #27374d;
+    position: relative;
+    bottom: 20px;
 }
